--- a/views/manage-users.ejs
+++ b/views/manage-users.ejs
@@ -20,11 +20,11 @@
         >
           <input type="hidden" name="id" value="<%= user.id %>" />
           <select name="role" id="role">
-            <option value="ADMIN" <%= user.role === 'ADMIN' ? 'selected' : '' %> >Admin</option>
-            <option value="MODERATOR" <%= user.role === 'MODERATOR' ? 'selected' : '' %>>Moderator</option>
-            <option value="CLIENT" <%= user.role === 'CLIENT' ? 'selected' : '' %>>Client</option>
+            <option value="ADMIN" <%= user.role === 'ADMIN' ? 'selected' : '' %> >ADMIN</option>
+            <option value="MODERATOR" <%= user.role === 'SELLER' ? 'selected' : '' %>>SELLER</option>
+            <option value="CLIENT" <%= user.role === 'CUSTOMER' ? 'selected' : '' %>>CUSTOMER</option>
           </select>
-          <input type="submit" value="update">
+          <input type="submit" value="Update">
         </form>
       </td>
     </tr>
