added inventory, epharma pages
added admin role function completely

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <h1 class="title">Role Based Access Control</h1>
 <div class="tutorial-info">
   <ol class="tutorial-info">
+    <li><b>Node JS</b></li>
     <li><b>Express JS </b></li>
     <li><b>EJS</b> templating engine</li>
     <li>
