--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
-  <h2>2MG Pharma</h2>
+  <h2>2Mg</h2>
   <ul>
     <li><a href="/">Home</a></li>
     <% if (user) { %>
@@ -7,6 +7,12 @@
     <% if (user.role === 'ADMIN') { %>
     <li><a href="/admin/users">Manage Users</a></li>
     <% } %>
+    <% if (['ADMIN', 'SELLER', 'CUSTOMER'].includes(user.role)) { %>
+      <li><a href="/user/epharma">E-Pharma</a></li>
+    <% } %>
+    <% if (['ADMIN'].includes(user.role)) { %>
+      <li><a href="/admin/inventory">Inventory</a></li>
+    <% } %>     
     <li><a href="/auth/logout">Logout</a></li>
     <% } else { %>
     <li><a href="/auth/register">Register</a></li>
