--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,23 @@
 <%- include('./layouts/header') %>
+  <div class="container">
+    <div class="content">
+      <div class="square twitch" style="margin-bottom: 50px;">
+        <span class="one"></span>
+        <span class="two"></span>
+        <span class="three"></span>
+        <div class="circle">
+          <h2 class="DrugRadar"> 2Mg Pharma
+          </h2>
+          <p>Market Place for local Pharmacy.</p>
+        </div>
+      </div>
 
-<h1 class="title">Role Based Access Control</h1>
-<div class="tutorial-info">
-  <ol class="tutorial-info">
-    <li><b>Node JS</b></li>
-    <li><b>Express JS </b></li>
-    <li><b>EJS</b> templating engine</li>
-    <li>
-      <b>Styling — </b>custom CSS (you can use any like Bootstrap, Bulma,
-      Tailwind, etc...)
-    </li>
-    <li><b> PassportJS </b>local authentication(email, password)</li>
-    <li><b>Roles</b> (admin, moderator, client)</li>
-    <li><b>Authorization</b> (admin, moderator and user routes)</li>
-    <li><b>Mongoose</b> (ORM for MongoDB)</li>
-    <li>How to use <b>express sessions</b></li>
-    <li>
-      Using sessions to <b>persist login </b> after server reboot (using Mongo
-      Store)
-    </li>
-    <li><b>Redirect</b> to same page after login.</li>
-    <li><b>Validating</b> user input server side</li>
-    <li><b>Flash messages</b></li>
-    <li>Handling <b>HTTP error</b> (ex: 404, etc)</li>
-    <li>Somethings are always extra 😊</li>
-  </ol>
-</div>
+      <a href="" class="button" target="_parent">
+        <span class="actual-text">&nbsp;Let's Go !&nbsp;</span>
+        <span class="hover-text" aria-hidden="true">&nbsp;Let's Go !&nbsp;</span>
+      </a>
+    </div>
+  </div>
 
-<%- include('./layouts/footer') %>
+
+  <%- include('./layouts/footer') %>
