--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         </div>
       </div>
 
-      <a href="" class="button" target="_parent">
+      <a href="/auth/register" class="button" target="_parent">
         <span class="actual-text">&nbsp;Let's Go !&nbsp;</span>
         <span class="hover-text" aria-hidden="true">&nbsp;Let's Go !&nbsp;</span>
       </a>
