--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -32,6 +32,7 @@
       filter: blur(0px);
     }
   }
+  
 </style>
 <nav>
   <h2 class="jt">
@@ -42,6 +43,10 @@
       <span class="jt__text">Pharma</span>
     </span>
   </h2>
+  <div id="menu-toggle">&#9776;</div>
+  <div id="menu-close">&#10006;</div>
+  
+
   <ul>
     <li><a href="/" class="active">Home</a></li>
     <% if (user) { %>
@@ -62,3 +67,13 @@
     <% } %>
   </ul>
 </nav>
+<script>
+  document.getElementById('menu-toggle').addEventListener('click', function() {
+  document.querySelector('nav').classList.toggle('open');
+});
+
+document.getElementById('menu-close').addEventListener('click', function() {
+  document.querySelector('nav').classList.remove('open');
+});
+
+</script>
